Fix z-index in Loading Screen Styles

--- a/app/assets/stylesheets/components/_loading_screen.scss
+++ b/app/assets/stylesheets/components/_loading_screen.scss
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1;
+  z-index: 10;
 }
 
 @keyframes fadeOut {
